// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link does not render the external icon even if the href is external 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="www.google.it"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link does not render the external icon if the href is internal 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="relative"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders correctly with noUnderline property 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon even if the href is internal 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-5 svg {
  fill: #2f75d7;
}

.emotion-5:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-5:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-5:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-5:visited:not(:disabled) {
  color: #903d91;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-2.emotion-2 {
  width: 16px;
  height: 16px;
}

<a
    class="emotion-5"
    href="/relative"
  >
    <span
      class="emotion-4"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          test link text
        </span>
      </span>
      <span
        class="emotion-1"
      >
        <svg
          aria-labelledby="mock-nk-1"
          class="emotion-2"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-nk-1"
          >
            External link
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon if the href is external 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="www.google.it"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`LinkStandalone renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 svg {
  fill: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #2f75d7;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

<a
    class="emotion-2"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;
